[#2174][#2183] Accept X.509 credentials
The registry implementations now accept X.509 credentials in update
Credentials requests. The registry now also removes existing credentials
on record that do not match any of the credentials in an update
Credentials request's body.

Fixes #2174
Fixes #2183

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>